build: add a quick play client run on each loader